src/objects/Summer21__c.object
<CustomObject>
    <fields>
        <fullName>Assignee__c</fullName>
        <label>Assignee</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summer_Month__c</fullName>
        <label>Summer_Month</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summer_Year__c</fullName>
        <label>Summer_Year</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Summer21</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Summer21 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Summer21</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>